@@ -617,12 +617,12 @@ case "$enable_nsec3" in
                 ;;
 esac
 
-AC_ARG_ENABLE(nsid, AC_HELP_STRING([--enable-nsid], [Enable NSID support]))
+AC_ARG_ENABLE(nsid, AC_HELP_STRING([--disable-nsid], [Disable NSID support]))
 case "$enable_nsid" in
-        yes)
-               AC_DEFINE([NSID], [], [Define this to enable NSID support.])
-               ;;
-        no|*)
+        no)
+                ;;
+        yes|*)
+                AC_DEFINE([NSID], [], [Define this to enable NSID support.])
                 ;;
 esac
 
