@@ -139,8 +139,7 @@ gethostname(3).
 Add the specified
 .I nsid
 to the EDNS section of the answer when queried with an NSID EDNS 
-enabled packet. This is disabled until IANA has given the NSID 
-option an OPCODE.
+enabled packet.
 .TP
 .B \-l\fI logfile
 Log messages to the specified 
